fix unaligned prompt #491

--- a/src/gnome-shell/sass/components/dialog/_dialog.scss
+++ b/src/gnome-shell/sass/components/dialog/_dialog.scss
@@ -265,6 +265,7 @@
     width: 28em;
 
     .modal-dialog-content-box {
+      text-align: center;
       margin-bottom: 24px;
     }
   }
@@ -305,6 +306,7 @@
     }
 
     .message-dialog-content {
+      text-align: center;
       spacing: 16px;
     }
 
